Fix alignment of home page language selectors

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -437,20 +437,6 @@
     fill: currentColor;
 }
 
-.atx-home .atx-spotlight__feature a.atx-spotlight__language .twemoji {
-    color: inherit;
-    height: 5rem;
-    margin: 2.4rem;
-}
-
-.atx-home .atx-spotlight__feature a.atx-spotlight__language > img:hover {
-    background-color: var(--md-default-fg-color--lightest);
-}
-
-.atx-home .atx-spotlight__feature a.atx-spotlight__language-selected > img {
-    background-color: var(--md-default-fg-color--lightest);
-}
-
 .atx-home .atx-features__description > :last-child {
     margin-bottom: 0
 }
